--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
     <p id="keyPressDisplay">Press any key...</p>
     <input type="text" id="textInput" placeholder="Type something..." />
     <p id="textInputDisplay">Your input will be displayed here.</p>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
